--- a/web-200/rescue/template.html
+++ b/web-200/rescue/template.html
@@ -6,42 +6,36 @@
 -->
 <html lang="en">
 <head>
-
   <title>Wild Rescues: Template</title>
   <meta charset="UTF-8">
-
 </head>
 
 <body>
 
+  <!-- Use the header area for the websites name or logo -->
   <header>
-
     <h1>&#128062; Wild Rescues</h1>
     <h3>Rescue. Rehabilitate. Release.</h3>
-
   </header>
 
+  <!-- Use the nav area to add hyperlinks to other pages within the website -->
   <nav>
-
     <p>Home &nbsp; &#9672; &nbsp;
     About Us &nbsp; &#9672; &nbsp;
     Partnership &nbsp; &#9672; &nbsp;
     Gallery &nbsp; &#9672; &nbsp;
     FAQs &nbsp; &#9672; &nbsp;
     Contact</p>
-
   </nav>
 
   <!-- Use the main area to add the main content to the webpage -->
-
   <main>
   </main>
 
+  <!-- Use the footer area to add webpage footer content -->
   <footer>
-
     <p>&copy; Copyright 2021. All Rights Reserved.</p>
     <p>contact@wildrescues.net</p>
-
   </footer>
 
 </body>
