--- a/web-200/rescue/contact.html
+++ b/web-200/rescue/contact.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <!--
   Student Name: Devin Ledesma
-  File Name: Lab 2: Creating a Webpage for a Wildlife Rescue
-  Date: 10/27/2024
+  File Name: Lab 2: Adding Links and Images for a Wildlife Rescue
+  Date: 11/05/2024
 -->
 <html lang="en">
 <head>
-  <title>Wild Rescues: Template</title>
+  <title>Wild Rescues: Contact</title>
   <meta charset="UTF-8">
 </head>
 
@@ -33,7 +33,13 @@
   <!-- Use the main area to add the main content to the webpage -->
   <main>
 
-    <div>
+    <div id="contact">
+      <h2>You can reach us at:</h2>
+      <p>Office: (814) 555-8989</p>
+      <p>Email: <a href="mailto:contact@wildrescues.net">contact@wildrescues.net</a></p>
+      <p>Address: <a href="https://maps.app.goo.gl/VCzY6efywkoh9oYx9" target="_blank">8989 Rescue Drive, Ocala, FL 34471</a></p>
+
+
     </div>
 
   </main>
